[package]
name = "warp_rpc"
version = "0.1.0"
authors = ["Michael Koukoullis <mike@kouky.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kouky/warp_rpc"
keywords = [ "warp", "reqwest", "rpc", "http", "service" ]
readme = "README.md"
description = "Build Rust RPC services powered by Warp + Reqwest"

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
warp = "0.3"
config = "0.11"

[dev-dependencies]
async-trait = "0.1"
paste = "1.0"
reqwest = { version = "0.11", features = ["json"] }

